修复1.4.1修复权限漏洞版本后，不能登陆web的问题