@@ -1,142 +1,105 @@
 #!/bin/bash
 
-# Copyright 1999-2018 Alibaba Group Holding Ltd.
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-cygwin=false
-darwin=false
-os400=false
-case "`uname`" in
-CYGWIN*) cygwin=true;;
-Darwin*) darwin=true;;
-OS400*) os400=true;;
-esac
-error_exit ()
-{
-    echo "ERROR: $1 !!"
-    exit 1
-}
-[ ! -e "$JAVA_HOME/bin/java" ] && JAVA_HOME=$HOME/jdk/java
-[ ! -e "$JAVA_HOME/bin/java" ] && JAVA_HOME=/usr/java
-[ ! -e "$JAVA_HOME/bin/java" ] && JAVA_HOME=/opt/taobao/java
-[ ! -e "$JAVA_HOME/bin/java" ] && unset JAVA_HOME
-
-if [ -z "$JAVA_HOME" ]; then
-  if $darwin; then
-
-    if [ -x '/usr/libexec/java_home' ] ; then
-      export JAVA_HOME=`/usr/libexec/java_home`
-
-    elif [ -d "/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home" ]; then
-      export JAVA_HOME="/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home"
-    fi
-  else
-    JAVA_PATH=`dirname $(readlink -f $(which javac))`
-    if [ "x$JAVA_PATH" != "x" ]; then
-      export JAVA_HOME=`dirname $JAVA_PATH 2>/dev/null`
-    fi
-  fi
-  if [ -z "$JAVA_HOME" ]; then
-        error_exit "Please set the JAVA_HOME variable in your environment, We need java(x64)! jdk8 or later is better!"
-  fi
-fi
-
+BASE_DIR=`cd $(dirname $0)/..; pwd`
+PROFILE="dev"
 export SERVER="nacos-server"
-export MODE="cluster"
-export FUNCTION_MODE="all"
-export MEMBER_LIST=""
-export EMBEDDED_STORAGE=""
-while getopts ":m:f:s:c:p:" opt
-do
-    case $opt in
-        m)
-            MODE=$OPTARG;;
-        f)
-            FUNCTION_MODE=$OPTARG;;
-        s)
-            SERVER=$OPTARG;;
-        c)
-            MEMBER_LIST=$OPTARG;;
-        p)
-            EMBEDDED_STORAGE=$OPTARG;;
-        ?)
-        echo "Unknown parameter"
-        exit 1;;
+export DEFAULT_SEARCH_LOCATIONS="classpath:/,classpath:/config/,file:./,file:./config/"
+export CUSTOM_SEARCH_LOCATIONS=${DEFAULT_SEARCH_LOCATIONS},file:${BASE_DIR}/conf/
+
+MAX_MEMORY=
+AUTH=
+AUTH_TOKEN=
+ACCESS_KEY=
+SECRET=
+DB_URL=
+DB_USER=
+DB_PASSWORD=
+params=$(getopt -o "P:a:t:k:s" -l "max-memory:,profile:,auth:,token:,access-key:,secret:,db-url:,db-user:,db-password:" -- "$@")
+echo $0 $params
+eval set -- "$params"
+while true; do
+    case "$1" in
+        --max-memory)
+            MAX_MEMORY=$2
+            shift 2
+            ;;
+        -a | --auth)
+            AUTH=$2
+            shift 2
+            ;;
+        -P | --profile)
+            PROFILE=$2
+            shift 2
+            ;;
+        -t | --token)
+            AUTH_TOKEN=$2
+            shift 2
+            ;;
+        -k | --access-key)
+            ACCESS_KEY=$2
+            shift 2
+            ;;
+        -s | --secret)
+            SECRET=$2
+            shift 2
+            ;;
+        --db-url)
+            DB_URL=$2
+            shift 2
+            ;;
+        --db-user)
+            DB_USER=$2
+            shift 2
+            ;;
+        --db-password)
+            DB_PASSWORD=$2
+            shift 2
+            ;;
+        --)
+            break
+            ;;
     esac
 done
 
-export JAVA_HOME
-export JAVA="$JAVA_HOME/bin/java"
-export BASE_DIR=`cd $(dirname $0)/..; pwd`
-export CUSTOM_SEARCH_LOCATIONS=file:${BASE_DIR}/conf/
-
-#===========================================================================================
-# JVM Configuration
-#===========================================================================================
-if [[ "${MODE}" == "standalone" ]]; then
-    JAVA_OPT="${JAVA_OPT} -Xms512m -Xmx512m -Xmn256m"
-    JAVA_OPT="${JAVA_OPT} -Dnacos.standalone=true"
+JAVA_OPT="-Xms128m"
+if [[ $MAX_MEMORY != "" ]]; then
+    JAVA_OPT="$JAVA_OPT -Xmx$MAX_MEMORY"
 else
-    if [[ "${EMBEDDED_STORAGE}" == "embedded" ]]; then
-        JAVA_OPT="${JAVA_OPT} -DembeddedStorage=true"
-    fi
-    JAVA_OPT="${JAVA_OPT} -server -Xms2g -Xmx2g -Xmn1g -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=320m"
-    JAVA_OPT="${JAVA_OPT} -XX:-OmitStackTraceInFastThrow -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${BASE_DIR}/logs/java_heapdump.hprof"
-    JAVA_OPT="${JAVA_OPT} -XX:-UseLargePages"
-
+    JAVA_OPT="$JAVA_OPT -Xmx384m"
+fi
+JAVA_OPT="$JAVA_OPT -XX:-OmitStackTraceInFastThrow -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${BASE_DIR}/logs/java_heapdump.hprof"
+JAVA_OPT="$JAVA_OPT -Dnacos.home=${BASE_DIR}"
+if [[ $PROFILE != "" ]]; then
+    JAVA_OPT="$JAVA_OPT -Dspring.profiles.active=$PROFILE"
 fi
 
-if [[ "${FUNCTION_MODE}" == "config" ]]; then
-    JAVA_OPT="${JAVA_OPT} -Dnacos.functionMode=config"
-elif [[ "${FUNCTION_MODE}" == "naming" ]]; then
-    JAVA_OPT="${JAVA_OPT} -Dnacos.functionMode=naming"
+if [[ $AUTH != "" ]]; then
+    JAVA_OPT="$JAVA_OPT -Dnacos.core.auth.enabled=$AUTH"
+fi
+if [[ $AUTH_TOKEN != "" ]]; then
+    JAVA_OPT="$JAVA_OPT -Dnacos.core.auth.default.token.secret.key=$AUTH_TOKEN"
+fi
+if [[ $ACCESS_KEY != "" ]]; then
+    JAVA_OPT="$JAVA_OPT -Dnacos.core.auth.server.identity.key=$ACCESS_KEY"
+fi
+if [[ $SECRET != "" ]]; then
+    JAVA_OPT="$JAVA_OPT -Dnacos.core.auth.server.identity.value=$SECRET"
+fi
+if [[ $DB_URL != "" ]]; then
+    JAVA_OPT="$JAVA_OPT -Ddb.url.0=$DB_URL"
+fi
+if [[ $DB_USER != "" ]]; then
+    JAVA_OPT="$JAVA_OPT -Ddb.user.0=$DB_USER"
+fi
+if [[ $DB_PASSWORD != "" ]]; then
+    JAVA_OPT="$JAVA_OPT -Ddb.password.0=$DB_PASSWORD"
 fi
 
-JAVA_OPT="${JAVA_OPT} -Dnacos.member.list=${MEMBER_LIST}"
+JAVA_OPT="$JAVA_OPT -jar ${BASE_DIR}/lib/$SERVER.jar"
+JAVA_OPT="$JAVA_OPT --spring.config.location=${CUSTOM_SEARCH_LOCATIONS}"
+JAVA_OPT="$JAVA_OPT --logging.config=${BASE_DIR}/conf/nacos-logback.xml"
+JAVA_OPT="$JAVA_OPT --server.max-http-header-size=524288"
 
-JAVA_MAJOR_VERSION=$($JAVA -version 2>&1 | sed -E -n 's/.* version "([0-9]*).*$/\1/p')
-if [[ "$JAVA_MAJOR_VERSION" -ge "9" ]] ; then
-  JAVA_OPT="${JAVA_OPT} -Xlog:gc*:file=${BASE_DIR}/logs/nacos_gc.log:time,tags:filecount=10,filesize=102400"
-else
-  JAVA_OPT="${JAVA_OPT} -Djava.ext.dirs=${JAVA_HOME}/jre/lib/ext:${JAVA_HOME}/lib/ext"
-  JAVA_OPT="${JAVA_OPT} -Xloggc:${BASE_DIR}/logs/nacos_gc.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
-fi
+echo "nohup java ${JAVA_OPT} >> /dev/null 2>&1 &"
 
-JAVA_OPT="${JAVA_OPT} -Dloader.path=${BASE_DIR}/plugins/health,${BASE_DIR}/plugins/cmdb"
-JAVA_OPT="${JAVA_OPT} -Dnacos.home=${BASE_DIR}"
-JAVA_OPT="${JAVA_OPT} -jar ${BASE_DIR}/target/${SERVER}.jar"
-JAVA_OPT="${JAVA_OPT} ${JAVA_OPT_EXT}"
-JAVA_OPT="${JAVA_OPT} --spring.config.additional-location=${CUSTOM_SEARCH_LOCATIONS}"
-JAVA_OPT="${JAVA_OPT} --logging.config=${BASE_DIR}/conf/nacos-logback.xml"
-JAVA_OPT="${JAVA_OPT} --server.max-http-header-size=524288"
-
-if [ ! -d "${BASE_DIR}/logs" ]; then
-  mkdir ${BASE_DIR}/logs
-fi
-
-echo "$JAVA ${JAVA_OPT}"
-
-if [[ "${MODE}" == "standalone" ]]; then
-    echo "nacos is starting with standalone"
-else
-    echo "nacos is starting with cluster"
-fi
-
-# check the start.out log output file
-if [ ! -f "${BASE_DIR}/logs/start.out" ]; then
-  touch "${BASE_DIR}/logs/start.out"
-fi
-# start
-echo "$JAVA ${JAVA_OPT}" > ${BASE_DIR}/logs/start.out 2>&1 &
-nohup $JAVA ${JAVA_OPT} nacos.nacos >> ${BASE_DIR}/logs/start.out 2>&1 &
-echo "nacos is starting，you can check the ${BASE_DIR}/logs/start.out"
+java ${JAVA_OPT}
